# LearnGL

./: .gitignore  CMakeLists.txt  main.cpp  vertex.glsl
HGL/: Texture.cpp  VertexArray.cpp  Window.cpp
HGL/include/: Texture.hpp  Window.hpp
